kubernetes/apps/datalakehouse/kafka/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kafka-ui
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - kafka.timcasa.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kafka-ui
      port: 8080
